Sodium/Iris Edition 2.0.0: merge compat layer, fix upstream defects
- Merge colorful_lighting_sodium_compat (Sodium 0.8 terrain vertex format,
  Iris shader-pack sanitize/tint, held-item colored light) into this jar
- Feed block updates from ClientLevel.setBlocksDirty and pump apply/re-mesh
  from the client tick: survives light-engine replacements (ScalableLux)
- Fix emissive-rendering fall-through that overwrote the fullbright value
- Respect renderer light virtuals (glow squid dimming, fullbright projectiles,
  modded overrides); item frames no longer forced fullbright
- Correct trilinear sampling weights; remove lerp zero-shortcut
- Ghost-light fixes: seed decreases from staged buffers, defer pull-in color
  resolution until after all pending decrease waves
- Atomic per-entry section storage (short[] instead of packed byte[])
- Worker thread: exception guard, named, daemon; storage writes serialized
- Config layer: NPE guards, reader leaks, namespace-dedup reload, hex/NFE
  guards, rounding color conversion
- Pin minecraft/neoforge ranges; require sodium/iris; package LICENSE.txt

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>