@@ -1,74 +1,63 @@
 package me.erykczy.colorfullighting.mixin.render;
 
+import dev.colorfullighting.compat.ColorfulLightGate;
 import me.erykczy.colorfullighting.common.ColoredLightEngine;
 import me.erykczy.colorfullighting.common.Config;
 import me.erykczy.colorfullighting.common.util.ColorRGB8;
 import me.erykczy.colorfullighting.common.util.PackedLightData;
-import net.minecraft.client.renderer.entity.DragonFireballRenderer;
 import net.minecraft.client.renderer.entity.EntityRenderer;
-import net.minecraft.client.renderer.entity.ThrownItemRenderer;
 import net.minecraft.core.BlockPos;
-import net.minecraft.core.registries.Registries;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.EntityType;
-import net.minecraft.world.entity.ExperienceOrb;
-import net.minecraft.world.entity.GlowSquid;
-import net.minecraft.world.entity.animal.allay.Allay;
-import net.minecraft.world.entity.decoration.ItemFrame;
-import net.minecraft.world.entity.monster.Blaze;
-import net.minecraft.world.entity.monster.MagmaCube;
-import net.minecraft.world.entity.projectile.DragonFireball;
-import net.minecraft.world.entity.projectile.EyeOfEnder;
-import net.minecraft.world.entity.projectile.ShulkerBullet;
 import net.minecraft.world.level.LightLayer;
 import net.minecraft.world.level.block.Blocks;
 import org.spongepowered.asm.mixin.Mixin;
+import org.spongepowered.asm.mixin.Shadow;
 import org.spongepowered.asm.mixin.injection.At;
 import org.spongepowered.asm.mixin.injection.Inject;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfoReturnable;
 
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Set;
 
 @Mixin(EntityRenderer.class)
-public class EntityRendererMixin {
-    private static final Set<EntityType<?>> FIRE_LIT_ENTITIES = new HashSet<>(Arrays.asList(
+public abstract class EntityRendererMixin {
+    private static final Set<EntityType<?>> FIRE_TINT_ENTITIES = Set.of(
             EntityType.BLAZE,
             EntityType.MAGMA_CUBE
-    ));
-    private static final Set<EntityType<?>> LIT_ENTITIES = new HashSet<>(Arrays.asList(
-            EntityType.ALLAY,
-            EntityType.DRAGON_FIREBALL,
-            EntityType.EXPERIENCE_ORB,
-            EntityType.GLOW_SQUID,
-            EntityType.ITEM_FRAME,
-            EntityType.SHULKER_BULLET,
-            EntityType.EYE_OF_ENDER,
-            EntityType.FIREBALL,
-            EntityType.SMALL_FIREBALL,
-            EntityType.VEX,
-            EntityType.WITHER,
-            EntityType.WITHER_SKULL
-    ));
+    );
+
+    @Shadow protected abstract int getBlockLightLevel(Entity entity, BlockPos pos);
+    @Shadow protected abstract int getSkyLightLevel(Entity entity, BlockPos pos);
 
     @Inject(method = "getPackedLightCoords", at = @At("HEAD"), cancellable = true)
     private <T extends Entity>void colorfullighting$getPackedLightCoords(T entity, float partialTicks, CallbackInfoReturnable<Integer> cir) {
+        ColoredLightEngine engine = ColoredLightEngine.getInstance();
+        if(engine == null) return; // vanilla path until the engine exists
         BlockPos blockpos = BlockPos.containing(entity.getLightProbePosition(partialTicks));
-        int skyLight = entity.level().getBrightness(LightLayer.SKY, blockpos);
-        ColorRGB8 color = ColoredLightEngine.getInstance().sampleTrilinearLightColor(entity.getLightProbePosition(partialTicks));
-        if(entity.isOnFire() || FIRE_LIT_ENTITIES.contains(entity.getType())) {
-            ColorRGB8 fireColor = ColorRGB8.fromRGB4(Config.getLightColor(Blocks.FIRE.builtInRegistryHolder().getKey()));
+        int skyLight = getSkyLightLevel(entity, blockpos);
+        ColorRGB8 color = engine.sampleTrilinearLightColor(entity.getLightProbePosition(partialTicks));
+
+        // keep calling the renderer's own light virtuals so vanilla and modded overrides
+        // (glow squid dimming, fullbright projectiles, ...) survive: any brightness the
+        // renderer reports beyond the level's actual block light becomes a boost, fire-
+        // tinted for burning entities, white otherwise
+        int rendererLight = getBlockLightLevel(entity, blockpos);
+        int levelLight = entity.level().getBrightness(LightLayer.BLOCK, blockpos);
+        if(rendererLight > levelLight) {
+            boolean fireTint = entity.isOnFire() || FIRE_TINT_ENTITIES.contains(entity.getType());
+            ColorRGB8 boost = fireTint
+                    ? ColorRGB8.fromRGB4(Config.getLightColor(Blocks.FIRE.builtInRegistryHolder().getKey())).mul(rendererLight / 15.0f)
+                    : ColorRGB8.fromRGB8(rendererLight * 17, rendererLight * 17, rendererLight * 17);
             color = ColorRGB8.fromRGB8(
-                Math.max(fireColor.red, color.red),
-                Math.max(fireColor.green, color.green),
-                Math.max(fireColor.blue, color.blue)
+                    Math.max(color.red, boost.red),
+                    Math.max(color.green, boost.green),
+                    Math.max(color.blue, boost.blue)
             );
         }
-        if(LIT_ENTITIES.contains(entity.getType())) {
-            color = ColorRGB8.fromRGB8(255, 255, 255);
-        }
 
-        cir.setReturnValue(PackedLightData.packData(skyLight, color));
+        int packedLight = PackedLightData.packData(skyLight, color);
+        // while a shader pack whose programs could not all be sanitized is active, the
+        // packed colorful value must be converted back to vanilla packed light on the CPU
+        cir.setReturnValue(ColorfulLightGate.decodeForShaderPack(packedLight));
     }
 }
